# src/adapters/controllers/projects/project-controller.ts
@@ -6,8 +6,8 @@ import { IProjectUseCase } from "../../../usecases/projects/project-interface";
 import { ProjectUsecase } from "../../../usecases/projects/project-usecase";
 import { APISecurity } from "../../../infrastructure/express/authentication";
 
-@Route("projects")
-@Tags("Project")
+@Route("internal/projects")
+@Tags("project-internal")
 @provideSingleton(ProjectController)
 export class ProjectController extends Controller {
   @inject(ProjectUsecase) private projectUsecase: IProjectUseCase;
@@ -24,5 +24,13 @@ export class ProjectController extends Controller {
   @SuccessResponse("200", "Return a project")
   public async findProject(@Request() _: EXRequest, @Path() id: string): Promise<ProjectResponse> {
     return ProjectResponse.fromDTO(await this.projectUsecase.findProject(id));
+  }
+
+  @Get()
+  @Security(APISecurity.AUTH0_USER)
+  @SuccessResponse("200", "Return projects")
+  public async getProjects(): Promise<ProjectResponse[]> {
+    const result = await this.projectUsecase.getProjects();
+    return result.map((project) => ProjectResponse.fromDTO(project));
   }
 }
